--- a/config/region_gr_S1.yml
+++ b/config/region_gr_S1.yml
@@ -1,6 +1,6 @@
 rep: "Rep Name"
-name: RegionGR
-description: "Base Model for Region GR"
+name: RegionGR_S1
+description: "Scenario 1 - Lower Miss Appointment Penalty"
 
 # Input Parameters
 path: region_gr
@@ -23,5 +23,5 @@ max_time_units_per_day: 52
 base_min_start: 0
 window_max_time: 100
 # Objective Weights
-miss_appointment_penalty: 6 # set to 1 to ignore appointment misses
+miss_appointment_penalty: 1 # set to 1 to ignore appointment misses
 global_span_cost: 1 # coeff * (max_end - min_start) - Higher value reduces weekly span
